--- a/agenda-app/start-here/src/app/app.component.html
+++ b/agenda-app/start-here/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-  <div class="row mt-3">
-    <div class="col-md-6">
-      Left column
+  <div class="row">
+    <div class="col-md-9">
+      <app-event></app-event>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-3">
       Right column
     </div>
   </div>
