--- a/agenda-app/start-here/src/app/app.component.html
+++ b/agenda-app/start-here/src/app/app.component.html
@@ -1,8 +1,11 @@
 <div class="container">
     <div class="row">
       <div class="col-md-9">
-        <app-event [value]="event"></app-event>
+        <div *ngFor="let event of events">
+          <app-event [value]="event"></app-event>
+        </div>
       </div>
       <div class="col-md-3"></div>
     </div>
   </div>
+
