--- a/agenda-app/start-here/src/app/app.component.html
+++ b/agenda-app/start-here/src/app/app.component.html
@@ -84,7 +84,7 @@
       <!--/.Body-->
       <!--Footer-->
       <div class="modal-footer justify-content-center">
-        <button type="button" mdbBtn color="info" class="waves-effect" mdbWavesEffect>
+        <button type="button" mdbBtn color="info" class="waves-effect" (click)="addNewEvent()" mdbWavesEffect>
           Add
         </button>
       </div>
